--- a/cfsl/src/main/resources/fxml/StopView.fxml
+++ b/cfsl/src/main/resources/fxml/StopView.fxml
@@ -9,8 +9,8 @@
 
 <StackPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Circle fill="WHITE" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" />
-      <Rectangle height="20.0" stroke="BLACK" strokeType="INSIDE" width="20.0" />
+      <Circle fill="WHITE" radius="25.0" stroke="BLACK" strokeType="INSIDE" />
+      <Rectangle height="18.0" stroke="BLACK" strokeType="INSIDE" width="18.0" />
    </children>
    <styleClass>
       <String fx:value="node" />
